<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/gridLayout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:orientation="vertical"
    android:rowCount="10" >

    <ImageButton
        android:id="@+id/imgBtnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_row="0"
        android:src="@drawable/ic_action_accept" />

    <ImageButton
        android:id="@+id/imgBtnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_row="0"
        android:src="@drawable/ic_action_remove" />

    <EditText
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="1"
        android:gravity="bottom"
        android:hint="@string/reminder" />

    <TextView
        android:id="@+id/eventType"
        android:layout_width="200dp"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_row="2"
        android:layout_rowSpan="1"
        android:paddingLeft="10dp"
        android:text="@string/event_type"
        android:textColor="#ff33b5e5" />

    <Spinner
        android:id="@+id/eventTypeSelect"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="2"
        android:layout_rowSpan="1"
        android:entries="@array/eventType_array"
        android:spinnerMode="dialog" />

    <TextView
        android:id="@+id/phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_marginTop="10dp"
        android:layout_row="3"
        android:layout_rowSpan="1"
        android:gravity="bottom"
        android:paddingLeft="10dp"
        android:text="@string/number"
        android:textColor="#ff33b5e5"
        android:visibility="gone" >
    </TextView>

    <EditText
        android:id="@+id/enterNumber"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="3"
        android:layout_rowSpan="1"
        android:focusable="false"
        android:hint="@string/enter_number"
        android:inputType="text"
        android:paddingRight="5dp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="4"
        android:layout_rowSpan="1" >

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:gravity="bottom"
            android:paddingLeft="10dp"
            android:text="@string/message"
            android:textColor="#ff33b5e5"
            android:visibility="gone" >
        </TextView>

        <EditText
            android:id="@+id/enterMessage"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="5dp"
            android:layout_gravity="fill_horizontal"           
            android:hint="@string/enter_message"
            android:paddingRight="5dp"
            android:visibility="gone" />
    </LinearLayout>

    <GridLayout
        android:id="@+id/gridLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="5"
        android:layout_rowSpan="1"
        android:columnCount="2"
        android:orientation="horizontal"
        android:rowCount="2" >

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_row="0"
            android:layout_rowSpan="1"
            android:paddingLeft="10dp"
            android:text="@string/pic_date"
            android:textColor="#ff33b5e5" >
        </TextView>

        <EditText
            android:id="@+id/lableDate"
            android:layout_width="192dp"
            android:layout_height="fill_parent"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_row="1"
            android:layout_rowSpan="1"
            android:focusable="false"
            android:hint="@string/enter_date"
            android:inputType="date" >
        </EditText>

        <TextView
            android:id="@+id/timeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:layout_row="0"
            android:layout_rowSpan="1"
            android:text="@string/pic_time"
            android:textColor="#ff33b5e5" >
        </TextView>

        <EditText
            android:id="@+id/lableTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:layout_gravity="left"
            android:layout_row="1"
            android:layout_rowSpan="1"
            android:focusable="false"
            android:hint="@string/enter_time"
            android:inputType="time" >

        </EditText>
    </GridLayout>

    <TextView
        android:id="@+id/remindMeIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_marginTop="10dp"
        android:layout_row="6"
        android:layout_rowSpan="1"
        android:gravity="bottom"
        android:paddingLeft="10dp"
        android:text="@string/remind_me_in"
        android:textColor="#ff33b5e5" >
    </TextView>

    <Spinner
        android:id="@+id/remindMeInSelect"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="6"
        android:layout_rowSpan="1"
        android:entries="@array/remind_mein_array"
        android:spinnerMode="dialog" />

    <TextView
        android:id="@+id/reminder_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_marginTop="10dp"
        android:layout_row="7"
        android:layout_rowSpan="1"
        android:gravity="bottom"
        android:paddingLeft="10dp"
        android:text="@string/reminder_type"
        android:textColor="#ff33b5e5" >
    </TextView>

    <Spinner
        android:id="@+id/reminderTypeSelect"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="7"
        android:layout_rowSpan="1"
        android:entries="@array/reminderType_array"
        android:spinnerMode="dialog" />

    <TextView
        android:id="@+id/priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_marginTop="10dp"
        android:layout_row="8"
        android:layout_rowSpan="1"
        android:gravity="bottom"
        android:paddingLeft="10dp"
        android:text="@string/priority"
        android:textColor="#ff33b5e5" >
    </TextView>

    <RatingBar
        android:id="@+id/priorityBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="8"
        android:layout_rowSpan="1"
        android:numStars="3" />

</GridLayout>